# msgvault-desktop

./: CLAUDE.md  Cargo.toml  README.md
.projects/specs/design/: DESIGN_SPEC.md
src/: app.rs  error.rs  main.rs  message.rs
src/api/: attachments.rs  client.rs  mod.rs  types.rs
src/config/: discovery.rs  mod.rs
src/model/: compose.rs  downloads.rs  mod.rs  navigation.rs  state.rs  thread.rs
src/theme/: colors.rs  components.rs  icons.rs  mod.rs  spacing.rs  typography.rs
src/update/: mod.rs
src/view/: accounts.rs  aggregates.rs  attachments.rs  compose.rs  dashboard.rs  layout.rs  message_detail.rs  messages.rs  mod.rs  search.rs  settings.rs  sidebar.rs  status_bar.rs  sync.rs  thread.rs  toolbar.rs  wizard.rs
src/view/widgets/: aggregate_row.rs  avatar.rs  badge.rs  breadcrumb.rs  loading.rs  mod.rs  stats_card.rs
