[package]
name = "msgvault-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Ben Labaschin <ben@econoben.com>"]
description = "Native desktop app for msgvault email archive"
repository = "https://github.com/EconoBen/msgvault-desktop"
license = "MIT"
readme = "README.md"

[dependencies]
# GUI framework
iced = { version = "0.13", features = ["tokio"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (used by iced)
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
directories = "5.0"
toml = "0.8"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
